[package]
name = "rs-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
moka = { version = "0.12.8", features = ["future", "sync"] }
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
